--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Метрики",
   "main": "index.js",
   "scripts": {
-    "dev:build": "env-cmd -e development webpack --mode development",
-    "prod:build": "env-cmd -e production webpack --mode production",
-    "deploy:content": "env-cmd -e content node xlsx-to-json-algolia.js",
-    "deploy:app": "gh-pages -d dist"
+    "app:dev:build": "env-cmd -e development webpack --mode development",
+    "app:prod:build": "env-cmd -e production webpack --mode production",
+    "app:deploy": "gh-pages -d dist",
+    "content:deploy": "env-cmd -e content node xlsx-to-json-algolia.js"
   },
   "repository": {
     "type": "git",
