--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "homepage": "https://github.com/shappoff/metrics#readme",
   "dependencies": {
     "algoliasearch": "^4.14.2",
+    "bootstrap": "^5.2.3",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^16.13.1",
     "react-select": "^5.7.0",
     "xlsx": "^0.18.5"
@@ -31,6 +33,7 @@
     "@types/algoliasearch": "^4.0.0",
     "@types/chrome": "0.0.122",
     "@types/react": "^16.9.46",
+    "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "^16.9.8",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
